--- a/assets/package.json
+++ b/assets/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "antd": "^3.5.1",
     "beatle": "^0.1.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.2",
+    "prop-types": "15.6.0",
+    "react": "15.4.1",
     "react-contextmenu": "^2.9.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^15.4.1"
   }
 }
