--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "demo",
   "version": "1.0.2",
   "description": "a simple hc-bee boilerplate",
-  "main": "",
+  "main": "app.js",
   "scripts": {
     "test": "make test",
     "eslint": "eslint --ext .js --ext .jsx --ignore-path .gitignore .",
@@ -26,6 +26,7 @@
     "hc-bee": "^0.0.4",
     "honeypack": "^0.3.1",
     "lodash": "4.17.4",
+    "path-ignore": "^1.0.1",
     "spa": "^0.3.4"
   },
   "devDependencies": {
