--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "beatle": "^0.1.0",
     "hc-bee": "^0.0.4",
+    "hc-proxy": "^1.0.1",
     "honeypack": "^0.3.1",
     "lodash": "4.17.4",
     "path-ignore": "^1.0.1",
